--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare" : "npm run build",
-    "prepublishOnly" : "npm test && npm run lint",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
-  "keywords": ["Calimero", "NEAR", "wallet"],
+  "keywords": [
+    "Calimero",
+    "NEAR",
+    "wallet"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bn.js": "^5.1.5",
     "@types/jest": "^29.5.10",
     "jest": "^29.7.0",
     "prettier": "^1.13.2",
@@ -29,5 +34,8 @@
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "peerDependencies": {
+    "near-api-js": "^2.1.4"
+  }
 }
