--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "calimero-wallet-utils",
   "version": "1.0.0",
+  "author": "Calimero Ltd",
   "description": "Calimero wallet integration utils",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -20,8 +21,11 @@
     "NEAR",
     "wallet"
   ],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/calimero-is-near/calimero-wallet-utils"
+  },
+  "license": "MIT",
   "devDependencies": {
     "@types/bn.js": "^5.1.5",
     "@types/jest": "^29.5.10",
